--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.13.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
