Check MetaMask existance

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@metamask/detect-provider": "^2.0.0",
     "antd": "^5.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
