--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "antd": "^5.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.8"
+    "recell": "github:vivekmunde/recell#develop",
+    "styled-components": "^6.1.8",
+    "web3": "^4.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
