--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.2.6",
     "@metamask/detect-provider": "^2.0.0",
     "antd": "^5.13.2",
+    "pusu": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recell": "github:vivekmunde/recell#develop",
